Ergänzungen und Fehlerkorrektur
git-svn-id: https://svn.lug-jena.de/uni-skripte@2293 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/vogel-krypt/skript.latex
+++ b/vogel-krypt/skript.latex
@@ -298,14 +298,14 @@ Die Übertragung der Nachricht erfolgt über \highl{Kanäle}, wie z.\,B. Boten,
 Kupferleitungen, Glasfasern oder drahtlose Verbindungen. Dabei kann es zu
 verschiedenen Beeinträchtigungen kommen:
 \begin{itemize}
- \item zufällige Störungen -- der Bote stürzt in eine Felsspalte
+ \item zufällige Störungen -- der Bote stürzt in eine Felsspalte.
  \item systematische (physikalisch bedingte) Störungen -- im Wald werden alle
-  Boten gefangen genommen
+  Boten gefangen genommen.
  \item passive Beeinträchtigungen -- wärend der König die Botschaft seinem
   Schreiber diktiert, hört der Spion hinterm Vorhang alles mit; Abhören von
-  Telefongesprächen, Auslesen von Speichermedien
+  Telefongesprächen, Auslesen von Speichermedien.
  \item aktive Beeinträchtigungen -- während der Bote sein Nickerchen macht,
-  tauscht ein Spion die Botschaft aus; Fälschen von Nachrichten und Daten
+  tauscht ein Spion die Botschaft aus; Fälschen von Nachrichten und Daten.
 \end{itemize}
 Mit den ersten beiden Punkten, also wie sichert man Nachrichten gegen
 Störeinflüsse, beschäftigt sich die Kodierungstheorie. Die
@@ -315,20 +315,20 @@ Aus diesen Beeinträchtigungen ergeben sich Anforderungen an kryptologische
 Verfahren:
 \begin{itemize}
  \item \highl{Geheimhaltung}/\highl{Vertraulichkeit} -- Lesen der Nachricht
-  für Unbefugte möglichst schwierig gestalten
+  für Unbefugte möglichst schwierig gestalten.
  \item \highl{Authentifizierung} -- Empfänger kann die \highl{Identität} des
   Senders prüfen; \highl{Authentisierung} -- Sender kann seine Identität
   einem Empfänger gegenüber beweisen; Empfänger weiß, dass die Nachricht
-  nicht von einem Dritten stammt
+  nicht von einem Dritten stammt.
  \item \highl{Integrität} -- Nachricht wurde während der Übertragung nicht
-  verändert (Austauschen, Weglassen oder Hinzufügen von Teilen)
+  verändert (Austauschen, Weglassen oder Hinzufügen von Teilen).
  \item \highl{Verbindlichkeit} -- Sender kann nicht leugnen, dass die Nachricht
-  von ihm stammt
+  von ihm stammt.
 \end{itemize}
 
 Im Laufe der Zeit hat sich das Anwendungsgebiet für Kryptologie gewandelt.
 Früher wurde sie vorwiegend zur Geheimhaltung z.\,B. militärischer Anwendungen
-eingesetzt, wärend heute durch den enormen Zuwachs der Kommunikation in
+eingesetzt, während heute durch den enormen Zuwachs der Kommunikation in
 offenen Netzwerken Kryptologie auch verstärkt im zivilen Bereich eingesetzt
 wird.
 
@@ -349,13 +349,15 @@ eines \highl[Entschlüsselungsverfahren]{Entschlüsselungsverfahrens}%
   \highl{decryption} bezeichnet} wieder die Nachricht rekonstruieren kann.
 
 Wärend der Übertragung könnte ein \highl[Angreifer!passiver]{passiver
-Angreifer} --~in der Kryptologie wird dieser mit \highl{Eve}\footnote{Eve: vom
-englischen Wort \textit{eavesdropper} für Horcher} bezeichnet~-- aus dem
-Geheimtext die Nachricht oder Teile davon rekonstruieren und aus diesem Wissen
-Vorteile ziehen. Oder ein \highl[Angreifer!aktiver]{aktiver Angreifer} --~in
-der Kryptologie wird dieser mit \highl{Mallory}\footnote{Mallory: vom
-englischen Wort \textit{malicious} für bösartig} bezeichnet~-- könnte den
-Geheimtext so verändern, dass der Klartext eine andere Bedeutung bekommt.
+Angreifer} --~in der Kryptologie wird dieser mit
+\highl{Eve}\footnote{Eve: vom englischen Wort \textit{eavesdropper}
+für Horcher oder Lauscher} bezeichnet~-- aus dem Geheimtext die
+Nachricht oder Teile davon rekonstruieren und aus diesem Wissen
+Vorteile ziehen. Oder ein \highl[Angreifer!aktiver]{aktiver Angreifer}
+--~in der Kryptologie wird dieser mit
+\highl{Mallory}\footnote{Mallory: vom englischen Wort
+\textit{malicious} für bösartig} bezeichnet~-- könnte den Geheimtext
+so verändern, dass der Klartext eine andere Bedeutung bekommt.
 
 \begin{defini}[Kryptosystem]
   Ein \highl{Kryptosystem}~$\mathcal{S}$ ist ein Fünftupel
@@ -413,11 +415,17 @@ sichere Verbindung übertragen.
  \item Mit demselben Schlüssel lassen sich mehrere Nachrichten verschlüsseln.
 \end{itemize}
 
-\begin{defini}[Kerkhoff'sches Prinzip]
-  Das \highl[Kerkhoff'sches Prinzip]{Kerkhoff'sche Prinzip} besagt, dass die \highl{Sicherheit} eines
+\begin{defini}[Kerckhoffs' Prinzip]
+  Das \highl[Kerckhoffs' Prinzip]{Kerckhoffs' Prinzip} besagt, dass die \highl{Sicherheit} eines
   Kryptosystems nur von der Geheimhaltung des Schlüssels jedoch nicht von der
   Geheimhaltung des Algorithmus' abhängt.
 \end{defini}
+
+Dieses Prinzip wurde 1883 von \textsc{Auguste Kerckhoffs} in seiner
+Arbeit "`La cryptographie militaire"'\footnote{Nachzulesen bei
+\href{http://www.petitcolas.net/fabien/kerckhoffs/}{Fabien
+Petitcolas}} niedergeschrieben. Er formulierte das Prinzip in sechs
+Einzelpunkten.
 
 % 18.10.2006
 
@@ -426,7 +434,7 @@ sichere Verbindung übertragen.
   \href{http://de.wikipedia.org/wiki/Freimaurer-Alphabet}{\highl{Freimaurercode}}
   (zweite Zeile in \autoref{fig:1}) arbeitet ohne Schlüssel. Jeder Buchstabe des Alphabets wird durch
   ein bestimmtes Geheimzeichen ersetzt. Damit ist der Freimaurercode kein
-  Kryptosystem, da das Kerkhoff'sche Pinzip verletzt ist: Die Sicherheit
+  Kryptosystem, da das Kerckhoffs' Pinzip verletzt ist: Die Sicherheit
   des Kryptosystems hängt von der Geheimhaltung des Algorithmus' ab.
   \begin{figure}[ht]
     \centering\ttfamily\large
