--- a/vogel-krypt/skript.latex
+++ b/vogel-krypt/skript.latex
@@ -74,6 +74,7 @@
 \usepackage{fancyvrb}
 \usepackage{tabularx}
 \usepackage{pigpen}
+\usepackage{todonotes}
 
 % Damit auch die Zeichen im Mathemode in Überschriften fett sind
 % <news:lzfyyvx3pt.fsf@tfkp12.physik.uni-erlangen.de>
@@ -132,10 +133,7 @@
 % einfach mit \help{Ich verstehe das nicht} hervorgehoben werden. Dies
 % macht es leichter sie alle zu finden und auch ganz einfach
 % auszublenden, indem man den Befehl einfach leer definiert
-\newcommand*{\help}[1]{\textcolor{green}{help: #1}}
-
-% \todo ist das gleiche wie \help nur für offene Aufgaben
-\newcommand*{\todo}[1]{\textcolor{red}{todo: #1}}
+\newcommand*{\help}[1]{\todo[color=green!40]{#1}}
 
 % Um wichtige Begriffe im Text überall gleich vorzuheben (gleiches
 % Markup), sollte dieser Befehl verwendet werden. Das Argument wird
