n. durch n-te ersetzt sowie kleinere Verbesserungen
git-svn-id: https://svn.lug-jena.de/uni-skripte@2301 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/vogel-krypt/skript.latex
+++ b/vogel-krypt/skript.latex
@@ -1628,7 +1628,7 @@ wenn $i<j$ und $\sigma(i)>\sigma(j)$ gilt.
 Die \highl{Determinante} einer quadratischen Matrix~$A\in R^{n\times n}$
 ($A=(a_{ij})_{n\times n}$ mit $a_{ij}\in R$) kann man auf zwei Weisen berechnen.
 
-Die Formel von Leibniz für die Determinante einer Matrix lautet:
+Die Formel von \textsc{Leibniz} für die Determinante einer Matrix lautet:
 \begin{gather*}
   \det A := \sum_{\sigma\in S_{n}} \sgn(\sigma) \cdot
      \prod_{i=1}^{n} a_{i\sigma(i)}\\
@@ -1666,7 +1666,7 @@ Die Formel von Leibniz für die Determinante einer Matrix lautet:
   \end{align*}
 \end{bsp}
 
-Die andere Möglichkeit ist das Verfahren von Laplace, bei dem nach einer Zeile
+Die andere Möglichkeit ist das Verfahren von \textsc{Laplace}, bei dem nach einer Zeile
 oder Spalte entwickelt wird:
 \begin{gather*}
   \det A = \sum_{j=1}^{n} (-1)^{i+j} a_{ij} A_{ij}
@@ -1905,7 +1905,7 @@ entwickelt und ist heute Grundlage für viele symmetrische Blockchiffren unter
 anderem dem heute am häufigsten eingesetzen Verschlüsselungsalgorithmus DES
 --~dazu später mehr in \autoref{sec:des}. Als Erfinder der Feistel"=Chiffre
 gilt
-\href{http://de.wikipedia.org/wiki/Horst_Feistel}{Horst Feistel}, ein
+\href{http://de.wikipedia.org/wiki/Horst_Feistel}{\textsc{Horst Feistel}}, ein
 Mitarbeiter des Projekts Lucifer.
 
 Bei der Feistel"=Chiffre werden die Klartextblöcke durch eine alternierende Folge von
@@ -1914,7 +1914,7 @@ sogenannten \highl[$S$-Box]{$S$-Boxen} durchgeführt und dienen dazu, die
 Konfusionseigenschaft der Verschlüsselung zu sichern. Die Transpositionen
 werden in sogenannten \highl[$P$-Box]{$P$-Boxen} (von Permutation)
 durchgeführt, um die Diffusionseigenschaft der Verschlüsselung zu
-erzeugen.\footnote{Konfusion und Diffusion sind nach Claude Shannon zwei
+erzeugen.\footnote{Konfusion und Diffusion sind nach \textsc{Claude Shannon} zwei
 wichtige Eigenschaften einer Verschlüsselung.}
 
 Einen einzelnen Durchlauf
@@ -2016,7 +2016,7 @@ $f(x)= f(x_1, x_2)= x_1\oplus x_2= x_1 + x_2 \mod 2$ für $x_1, x_2 \in
 \mathbb{F}_2$ folgt.
 
 Ist die Funktion~$f$ eine krytographisch sichere Pseudozufallsfunktion, so
-haben Michael Luby und Charles Rackoff gezeigt\cite{luby}, reichen drei Runden um eine
+haben \textsc{Michael Luby} und \textsc{Charles Rackoff} gezeigt\cite{luby}, reichen drei Runden um eine
 Pseudozufallspermutation zu erreichen. Mit vier Runden bekommt man sogar eine
 starke Pseudozufallspermutation.\footnote{Geklaut aus der
 \href{http://en.wikipedia.org/wiki/Feistel_cipher}{englischen Wikipedia}, die
@@ -2054,7 +2054,7 @@ Die International Organization for Standardization~(ISO) übernahm den
 Algorithmus unter der Bezeichnung "`Data Encipherment No.\,1"'~(DEA-1) in ihr
 Verzeichnis.
 
-Die Kryptographen Eli Biham und Adi Shamir entwickelten gegen Anfang
+Die Kryptographen \textsc{Eli Biham} und \textsc{Adi Shamir} entwickelten gegen Anfang
 der 90er Jahre die \highl[Kryptoanalyse!differentielle]{differentielle
 Kryptoanalyse} als Spezialform der Kryptoanalyse. Dabei wird untersucht, wie
 sich der Geheimtext bei unterschiedlichen Eingaben ändert. Das Verfahren
@@ -2144,7 +2144,7 @@ $IP^{-1}$ permutiert.
   \label{fig:des-runde}
 \end{figure}
 
-In der $i$.~Runde wird gemäß des \highl[Feistel-Netzwerk]{Feistel-Netzwerks}
+In der $i$-ten~Runde wird gemäß des \highl[Feistel-Netzwerk]{Feistel-Netzwerks}
 die Eingabe in eine linke und reche Hälfte $(L,R)$ geteilt. Die Ausgabe der
 Runde $(L', R')$ wird durch $L'=R$ und $R'=L\oplus f_{k_{i}}(R)$ erzeugt,
 wobei die Verschlüsselungsfunktion~$f$ wie folgt aufgebaut ist:
@@ -2313,8 +2313,8 @@ einer $2\times8$-Tabelle mit Einträgen aus $\{0,\dotsc,7\}$ gegeben.
 \end{gather*}
 Für eine Eingabe~$\alpha=(\begin{matrix}\alpha_{1}&\dotso&\alpha_{4}
 \end{matrix})$ ist das Ergebnis der Transformation in der
-$(\alpha_{1}+1)$.~Zeile und in der $(2^{2}\cdot\alpha_{2}+2\cdot\alpha_{3}+
-\alpha_{4})$.~Spalte abzulesen. Das erste Bit kodiert also die Zeile (0 für
+$(\alpha_{1}+1)$-ten~Zeile und in der $(2^{2}\cdot\alpha_{2}+2\cdot\alpha_{3}+
+\alpha_{4})$-ten~Spalte abzulesen. Das erste Bit kodiert also die Zeile (0 für
 die erste, 1 für die zweite) und die verbleibenden drei Bits beschreiben als
 Binärzahl interpretiert die Spalte (000 die erste, 111 die achte).
 
@@ -2416,7 +2416,7 @@ einiger $S$-Boxen nicht gleichverteilt.
 
 % 22.11.
 
-Die Eingabe der $i$.~Runde sei der Block $(L_{i-1}, R_{i-1})$, wobei für
+Die Eingabe der $i$-ten~Runde sei der Block $(L_{i-1}, R_{i-1})$, wobei für
 $f_{k_{i}}$ nur $R_{i-1}$ relevant ist. Der Ablauf ist nun wie folgt:
 \begin{enumerate}
  \item Diffusion: $d = D(R_{i-1})$
@@ -2443,7 +2443,7 @@ gelangt, so kann man das Ergebnis der Rundenfunktion wie folgt darstellen:
 \end{align*}
 
 Für zwei verschiedene Eingaben $R_{i-1}$ und $\tilde{R}_{i-1}$ in der
-$i$.~Runde ist die Eingabedifferenz der $\ell$.~$S$-Box
+$i$-ten~Runde ist die Eingabedifferenz der $\ell$-ten~$S$-Box
 \begin{gather}
   \label{eq:eing-diff}
   a^{\ell} \oplus \tilde{a}^{\ell}
@@ -2453,7 +2453,7 @@ $i$.~Runde ist die Eingabedifferenz der $\ell$.~$S$-Box
 \end{gather}
 Man kann also aus der Ausgabe des Diffusionsschritts (1.~Schritt)
 Rückschlüsse auf die Eingabe des Konfusionsschritts (3.~Schritt) ziehen. Die
-Ausgabedifferenz der $\ell$.~$S$-Box ist
+Ausgabedifferenz der $\ell$-ten~$S$-Box ist
 \begin{gather*}
   S_{\ell}(a^{\ell}) \oplus S_{\ell}(\tilde{a}^{\ell})
      = S_{\ell}(d^{\ell}\oplus k_{i}^{\ell}) \oplus
@@ -2771,7 +2771,7 @@ wird ein Brute-Force-Angriff gegenüber DES wesentlich erschwert.
 \begin{figure}[ht]
   \centering
   \input{idea.pdf_t}
-  \caption{Blockschema für den Ablauf der $i$. Runde der IDEA"=Verschlüsselung}
+  \caption{Blockschema für den Ablauf der $i$-ten Runde der IDEA"=Verschlüsselung}
   \label{fig:idea}
 \end{figure}
 
@@ -3094,7 +3094,7 @@ Ausgabe: ggT := b[i], u := u[i], v := v[i];
     $b_{0}\cdot u_{i} + b_{1}\cdot v_{i} = b_{i}$.
 
     Der Induktionsanfang für $i=1$ ist klar. Also gilt die Aussage
-    für den $(i-1)$. und $i$.~Schritt. Für den $(i+1)$.~Schritt
+    für den $(i-1)$-ten und $i$-ten~Schritt. Für den $(i+1)$-ten~Schritt
     folgt dann
     \begin{align*}
       b_{0} u_{i+1} + b_{1} v_{i+1} &= b_{0} (u_{i-1} - q_{i} u_{i}) + b_{1}
@@ -3377,7 +3377,7 @@ ist. Jede Runde bis auf die letzte besteht aus vier Schritten
  \item \highl{Mix-Column} -- Diffusion der Bits innerhalb einer Spalte
 \end{enumerate}
 In der letzten Runde wird statt dem Mix-Column-Schritt nochmal ein
-Key-Add-Schritt mit dem $(r+1)$.~Schlüssel vorgenommen.
+Key-Add-Schritt mit dem $(r+1)$-ten~Schlüssel vorgenommen.
 
 % 20.12.
 
@@ -3408,11 +3408,11 @@ $4\times4$-Matrix spaltenweise übertragen werden:
 \begin{figure}
   \centering
   \input{aes-runde.pdf_t}
-  \caption{Schema für die $i$.~Runde des AES}
+  \caption{Schema für die $i$-ten~Runde des AES}
   \label{fig:aes}
 \end{figure}
 
-Die Eingabe des ersten Schritts (\highl{Key-Add}) in der $i$.~Runde wird mit
+Die Eingabe des ersten Schritts (\highl{Key-Add}) in der $i$-ten~Runde wird mit
 $S_{i,a}$ bezeichnet und das Ergebnis des ersten Schritts wird als Eingabe des
 zweiten Schritts (\highl{Byte-Sub}) verwendet und mit $S_{i,b}$ bezeichnet
 \begin{gather*}
@@ -3433,9 +3433,9 @@ Das Ergbnis des zweiten Schritts wird als Eingabe des dritten Schritts
 (\highl{Row-Shift}) verwendet und mit $S_{i,c}$ bezeichnet. Das Ergebnis des
 dritten Schritts wird als Eingabe für den vierten Schritt
 (\highl{Column-Mix}) verwendet und mit $S_{i,d}$ bezeichnet. Die
-Ausgabe des vierten Schritts ist gleichzeitig die Ausgabe der $i$.~Runde und
+Ausgabe des vierten Schritts ist gleichzeitig die Ausgabe der $i$-ten~Runde und
 somit wieder die Eingabe~$S_{i+1,a}$ für den ersten Schritt in der
-$(i+1)$.~Runde. siehe \autoref{fig:aes}
+$(i+1)$-ten~Runde. siehe \autoref{fig:aes}
 
 Für die Elemente des Rings $\nicefrac{\F_{256}[x]}{x^{4}+1}$ verwendent man
 die Polynomdarstellung oder die Hexadezimalschreibweise
@@ -3589,7 +3589,7 @@ Rechnen in $\nicefrac{\F_{256}[x]}{x^{4}+1}$ zeilenweise:
      &= [c^{(3,0)}, c^{(3,1)}, c^{(3,2)}, c^{(3,3)}] \otimes 01x
 \end{align*}
 
-Praktisch bedeutet das, dass die Elemente in der $k$.~Eingabezeile um $k$
+Praktisch bedeutet das, dass die Elemente in der $k$-ten~Eingabezeile um $k$
 Plätze nach links rotiert werden.
 \begin{gather*}
   \begin{pmatrix}
@@ -3977,13 +3977,13 @@ $g_{n,m}\colon \Z_{n} \mapsto \Z_{n}$ so definiert
 
 \begin{defini}
   Die inverse Abbildung $g_{n,m}^{-1}\colon\Z_{n} \rightarrow \Z_{n}$
-  bezeichnet man als \highl{$m$.~Wurzel}. $g^{-1}_{n,m}$ berechnet für
+  bezeichnet man als \highl{$m$-te~Wurzel}. $g^{-1}_{n,m}$ berechnet für
   ein gegebenes $y$, das $a$, so dass $a^{m}\mod n = y$ gilt, falls ein
   solches $a$ existiert.
 \end{defini}
 
 Hier gibt es das gleiche Problem wie beim diskreten Logarithmus, dass
-$g_{n,m}$ nicht eindeutig ist, d.\,h. die $m$.~Wurzel ist keine Funktion.
+$g_{n,m}$ nicht eindeutig ist, d.\,h. die $m$-te~Wurzel ist keine Funktion.
 Beispielsweise ist die 4.~Wurzel von 16 für $n=21$ gleich
 \begin{gather*}
   g_{21,4}(5) = 5^{4}\mod{21} = 16 = 2^{4}\mod 21 = g_{21,4}(2)
@@ -4134,7 +4134,7 @@ ist eine multiplikative Gruppe der Ordnung $\phi(n)$.
   natürlichen Zahlen~$n$, $m$ und $y$, wobei $\ggT(m,\phi(n)) = 1$ und $n$ das
   Produkt zwei bekannter Primzahlen~$p$ und $q$ ist, eine Zahl $a$ mit der
   Eigenschaft $g_{n,m}(a) = a^{m}\mod n = y$ bestimmt, d.\,h. der Algorithmus
-  berechnet die $m$.~Wurzel $a=g_{n,m}^{-1}(y)$. Die Faktorisierung von $n$
+  berechnet die $m$-te~Wurzel $a=g_{n,m}^{-1}(y)$. Die Faktorisierung von $n$
   in $p\cdot q$ ist die
   \highl{Falltürinformation}.
 
@@ -4355,7 +4355,7 @@ Das RSA-Verfahren ist also so konstruiert, dass
     möglichst klein sein. siehe \autoref{sec:rsa-angriffe}
 
    \item Ein direkter Angriff würde bedeuten, da $c=m^{e}\pmod{n}$ ist, aus
-    $c$ die $e$.~Wurzel modulo~$n$ zu berechen. Dies ist nach \autoref{bem:2}
+    $c$ die $e$-te~Wurzel modulo~$n$ zu berechen. Dies ist nach \autoref{bem:2}
     praktisch nicht machbar.
 
    \item Die Nachricht muss in Blöcke passender Länge zerlegt werden.
@@ -4406,8 +4406,8 @@ Das RSA-Verfahren ist also so konstruiert, dass
 \begin{bemerk}
   Die Sicherheit von RSA beruht auf zwei Säulen:
   \begin{itemize}
-   \item Die Nachricht~$m$ lässt sich als die $e$.~Wurzel aus $c$ berechnen.
-    Die Berechnung der $e$.~Wurzel ist aber ohne die Kenntnis der
+   \item Die Nachricht~$m$ lässt sich als die $e$-te~Wurzel aus $c$ berechnen.
+    Die Berechnung der $e$-te~Wurzel ist aber ohne die Kenntnis der
     Faktorisierung von $n$ nicht in Polynomialzeit durchführbar.
     \autoref{bem:2}
 
@@ -4595,7 +4595,7 @@ Es ist sinnvoll diese Optimierung in einem hybriden Verfahren anzuwenden.
 Das \highl{Elgamal-Verfahren} wurde 1985 von Taher Elgamal entwickelt und
 beruht auf der Annahme, dass der diskrete Logarithmus (\autoref{sec:diskrlog})
 eine Einwegfunktion ist. Da man für den diskreten Logarithmus keine
-Falltürinformation wie für die $m$.~Wurzel benötigt, beruht die Sicherheit
+Falltürinformation wie für die $m$-te~Wurzel benötigt, beruht die Sicherheit
 von Elgamal im Wesentlichen auf dem Dogma, dass der diskrete Logarithmus
 praktisch nicht berechenbar ist.
 
@@ -4704,7 +4704,7 @@ sich also noch darüber verständigen, welche der vier möglichen Wurzeln der
 gemeinte Klartext ist.
 
 Die Sicherheit des Verfahrens beruht darauf, dass Wurzelziehen nur möglich
-ist, wenn $p$ und $q$ bekannt sind, da die $m$.~Wurzel nicht
+ist, wenn $p$ und $q$ bekannt sind, da die $m$-te~Wurzel nicht
 $\FP$-berechenbar.
 
 \section{Digitale Signaturen}
@@ -4951,7 +4951,7 @@ der Länge~$n$ zerlegt wird, d.\,h. $x_{i}\in\Z_{2}^{n}$, --~der letzte Block
 wird einfach bis zur Länge $n$ aufgefüllt.
 
 Der Hashwert einer Nachricht~$H(x)$ ist der Wert~$k_{l}$ nach der
-$l$.~Iteration der Vorschrift $k_{i}=f(x_{i},k_{i-1})$ für $i=1,\dotsc,l$.
+$l$-ten~Iteration der Vorschrift $k_{i}=f(x_{i},k_{i-1})$ für $i=1,\dotsc,l$.
 Die Funktion $f\colon\Z_{2}^{n}\times\Z_{2}^{n}\mapsto\Z_{2}^{n}$ wird durch
 die Verschlüsselungsfunktion auf folgende Weise definiert, wobei man vier
 verschieden Typen unterscheidet:
