Namen des AES-Runden zum Teil angepasst
git-svn-id: https://svn.lug-jena.de/uni-skripte@2304 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/vogel-krypt/skript.latex
+++ b/vogel-krypt/skript.latex
@@ -3370,14 +3370,14 @@ $r+1$~Rundenschlüssel von je 128~Bit Länge erzeugt, wobei $r$ die Rundenzahl
 ist. Jede Runde bis auf die letzte besteht aus vier Schritten
 (\autoref{fig:aes}):
 \begin{enumerate}
- \item \highl{Key-Add} -- Verknüpfung mit dem Rundenschlüssel
- \item \highl{Byte-Sub} -- nicht lineare Transformation als Schutz vor
+ \item \highl{AddRoundKey} -- Verknüpfung mit dem Rundenschlüssel
+ \item \highl{SubBytes} -- nicht lineare Transformation als Schutz vor
   differenzieller und linearer Kryptoanalyse
- \item \highl{Shift-Row} -- Diffusion der Bits innerhalb einer Zeile
- \item \highl{Mix-Column} -- Diffusion der Bits innerhalb einer Spalte
+ \item \highl{ShiftRows} -- Diffusion der Bits innerhalb einer Zeile
+ \item \highl{MixColumns} -- Diffusion der Bits innerhalb einer Spalte
 \end{enumerate}
-In der letzten Runde wird statt dem Mix-Column-Schritt nochmal ein
-Key-Add-Schritt mit dem $(r+1)$-ten~Schlüssel vorgenommen.
+In der letzten Runde wird statt dem MixColumns-Schritt nochmal ein
+AddRoundKey-Schritt mit dem $(r+1)$-ten~Schlüssel vorgenommen.
 
 % 20.12.
 
