--- a/vogel-krypt/skript.latex
+++ b/vogel-krypt/skript.latex
@@ -1559,7 +1559,7 @@ $[a]_{k} \cdot [b]_{k} = [1]_{k}$. In diesem Fall heiﬂt $[b]_{k}$
     mit $[a]_{k}\cdot [b]_{k} = [a\cdot b]_{k} = [1]_{k} = 1+k\Z$ existiert,
     d.\,h. es gibt ein $b$ und ein $l$, so dass $ab= 1+kl$, also $ab-kl=1$. Dies
     gilt \gdw $\ggT(a,b)=1$.
-    \help{Wieso gilt $ab-kl=1$ \gdw $\ggT(a,b)=1$? Ist $\ggT(a,b)$ ein
+    \help{Wieso gilt $ab-kl=1\Leftrightarrow \ggT(a,b)=1$? Ist $\ggT(a,b)$ ein
       Schreibfehler und soll $\ggT(a,k)$ sein? Dann k‰me die Beziehung aus dem
       erweiterten euklidischen Algorithmus, der aber an dieser Stelle noch
       nicht bekannt ist.}
