weitere Quelle eingebaut
git-svn-id: https://svn.lug-jena.de/uni-skripte@2309 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/vogel-krypt/skript.latex
+++ b/vogel-krypt/skript.latex
@@ -1332,7 +1332,7 @@ Es gibt zwei verschiedene Ansätze der Verschlüsselung:
 \end{bsp}
 
 \begin{bsp}
-  \help{Hat jemand den Text dazu?}
+  \todo{Hat jemand den Text dazu?}
   Die erste Zeile für $k=11$ enthält zu viele Konsonanten und die letzte Zeile
   zu viele Vokale für einen deutschen Text.
 
@@ -2714,7 +2714,9 @@ acht Bit.
 
   Quelle:
   \href{http://w2.eff.org/Privacy/Crypto/Crypto_misc/DESCracker/HTML/19980716_eff_des_faq.html#howsitwork}{FAQ
-  der EFF zum DES-Cracker}
+  der EFF zum DES-Cracker} und
+\href{http://cryptome.org/jya/cracking-des/cracking-des.htm}{Cracking
+  DES von der EFF}
  \item Es gibt bei DES \highl[Schlüssel!schwacher]{schwache Schlüssel}, die für alle Runden den gleichen
   Rundenschlüssel erzeugen. Aber man kann diese auch einfach beim Einsatz
   vermeiden.
