--- a/vogel-krypt/skript.latex
+++ b/vogel-krypt/skript.latex
@@ -1554,10 +1554,12 @@ $[a]_{k} \cdot [b]_{k} = [1]_{k}$. In diesem Fall heißt $[b]_{k}$
 
 \begin{lemma}
   \label{lem:5}
+\emph{Die untenstehende Definition der $\phi$-Funktion ist nicht korrekt!}
   Die Eulersche $\phi$-Funktion $\phi(k)$ ist die Anzahl der Mengen $\{a,b\}\subset
   \{1,\dotsc,k-1\}^{2}$, für die gilt $\ggT(a,b)=1$. Also gibt es in $\Z_{k}$
   genau $\phi(k)$ Einheiten.
-  \help{Stimmt diese Definition der $\phi$-Funktion?}
+  \help{Stimmt diese Definition der $\phi$-Funktion? Nein! Sie ist
+    nicht äquivalent zur allgemeinen Definition, wie man leicht nachprüft.}
 
   \begin{proof}
     $[a]_{k}$ ist eine Einheit in $Z_{k}$ \gdw ein $[b]_{k}$
