--- a/vogel-krypt/skript.latex
+++ b/vogel-krypt/skript.latex
@@ -1560,14 +1560,17 @@ $[a]_{k} \cdot [b]_{k} = [1]_{k}$. In diesem Fall heiﬂt $[b]_{k}$
   genau $\phi(k)$ Einheiten.
 
   \begin{proof}
+\emph{Im Beweis stimmt ebenfalls etwas nicht. Sei $k=7$. Dann w‰re
+  $[2]_{7}$ eine Einheit, denn $2\cdot4=1+7\Z$. Aber
+  $\ggT(2,4)\neq1$. Andererseits ist $\ggt(2,3)=1$, aber $2\cdot3=6+7\Z$.}
     $[a]_{k}$ ist eine Einheit in $Z_{k}$ \gdw ein $[b]_{k}$
     mit $[a]_{k}\cdot [b]_{k} = [a\cdot b]_{k} = [1]_{k} = 1+k\Z$ existiert,
     d.\,h. es gibt ein $b$ und ein $l$, so dass $ab= 1+kl$, also $ab-kl=1$. Dies
     gilt \gdw $\ggT(a,b)=1$.
-    \help{Wieso gilt $ab-kl=1\Leftrightarrow \ggT(a,b)=1$? Ist $\ggT(a,b)$ ein
-      Schreibfehler und soll $\ggT(a,k)$ sein? Dann k‰me die Beziehung aus dem
-      erweiterten euklidischen Algorithmus, der aber an dieser Stelle noch
-      nicht bekannt ist.}
+    % \help{Wieso gilt $ab-kl=1\Leftrightarrow \ggT(a,b)=1$? Ist $\ggT(a,b)$ ein
+    %   Schreibfehler und soll $\ggT(a,k)$ sein? Dann k‰me die Beziehung aus dem
+    %   erweiterten euklidischen Algorithmus, der aber an dieser Stelle noch
+    %   nicht bekannt ist.}
   \end{proof}
 \end{lemma}
 
