Verweis zu Forschungsarbeit von Campbell/Wiener: "DES is not a group" eingebaut und help entfernt
git-svn-id: https://svn.lug-jena.de/uni-skripte@2324 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/vogel-krypt/skript.latex
+++ b/vogel-krypt/skript.latex
@@ -2196,9 +2196,7 @@ DES_{k_{2}}$ einfach die einfache Verschlüsselung $DES_{k_{3}}$ angreifen, der
 Schlüsselraum hätte sich also nicht vergrößert. Es gilt sogar, dass die Gruppe
 von Verschlüsselungen, die durch beliebige Verkettungen von
 DES-Verschlüsselungen erzeut wird, mehr als $10^{2499}$ Verschlüsselungen
-umfasst.\cite[S.\,258]{menezes}
-\help{Eigentlich sollte das bereits von Don Coppersmith 1993 gezeigt worden
-  sein. Kennt jemand dazu eine Quelle?}
+umfasst.\cite[S.\,258]{menezes}\cite{wiener}
 
 \begin{itemize}
  \item Eine Variante ist es, den Geheimtext noch einmal zu verschlüsseln:
@@ -5224,6 +5222,10 @@ prüfen kann. \autoref{tab:zero-know}
   and its strength against attacks"', IBM Journal of Research and Development,
   Band~38, 1994,\\
   \url{http://www.research.ibm.com/journal/rd/383/coppersmith.pdf}
+\bibitem{wiener} Keith W.\,Campbell, Michael J.\,Wiener: "`DES is not
+  a group"', Advances in cryptology "= Crypto '92, pages 512"=520,
+  Springer-Verlag, 1993,\\
+  {\small \url{http://dsns.csie.nctu.edu.tw/research/crypto/HTML/PDF/C92/512.PDF}}
 \end{thebibliography}
 
 \chapter{Übungsaufgaben}
