--- a/kuelshammer-algebra1/skript.latex
+++ b/kuelshammer-algebra1/skript.latex
@@ -10,7 +10,14 @@
 % zweiseitig (twoside), d.h. es wird zwischen linker und rechter Seite
 % unterschieden.
 
-\RequirePackage[l2tabu,orthodox]{nag}
+\RequirePackage[l2tabu,orthodox]{nag}  % nag überprüft den Text auf veraltete
+                   % Befehle oder solche, die man nicht in LaTeX verwenden
+                   % soll -- l2tabu-Checker in LaTeX
+
+\RequirePackage[ngerman=ngerman-x-latest]{hyphsubst} % einbinden der neuen
+                   % Trennmuster, diese korrigieren einige Fehler der alten
+                   % und bieten mehr Trennstellen
+
 \documentclass[ngerman,draft,twoside,parskip=half*]{scrreprt}
 
 \usepackage{babel}
