Änderungen in der Vorlesung vom 2009-10-23
git-svn-id: https://svn.lug-jena.de/uni-skripte@2332 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/kuelshammer-algebra1/skript.latex
+++ b/kuelshammer-algebra1/skript.latex
@@ -135,6 +135,9 @@
 % ordentliches :=
 \newcommand*{\coloneqq}{\mathrel{\mathop:}=}
 
+\newcommand*{\plusdot}{\ensuremath{\mathrel{+\above0pt \cdot}}}
+
+
 % Wenn irgendwo Unklarheiten zum Inhalt im Skript auftreten, können sie
 % einfach mit \help{Ich verstehe das nicht} hervorgehoben werden. Dies
 % macht es leichter sie alle zu finden und auch ganz einfach
@@ -453,7 +456,7 @@ Also ist $\ggt(143, 91) = 13 = 2 \cdot 143 - 3 \cdot 91$.
   \highl{teilerfremd}.
 \end{bem}
 
-% Definition 1.5
+% Definition 1.7
 \begin{defi}\label{defi:1.5}
   Eine natürliche Zahl $p \neq 1$ heißt \highl{Primzahl}, falls
   $\pm 1, \pm p$ ihre einzigen Teiler sind. Setze
@@ -462,12 +465,12 @@ Also ist $\ggt(143, 91) = 13 = 2 \cdot 143 - 3 \cdot 91$.
   (\highl{Primfaktor}) von $a$.
 \end{defi}
 
-% Bemerkung
-\begin{bem}
+% Beispiel
+\begin{bsp}
 $\PZ = \{2, 3, 5, 7, 11, 13, \ldots\}$
-\end{bem}
+\end{bsp}
 
-% Satz 1.6
+% Satz
 \begin{satz}\label{satz:1.6}
 Jede natürliche Zahl $a \neq 1$ hat einen Primteiler.
 \begin{beweis}
@@ -475,15 +478,15 @@ Jede natürliche Zahl $a \neq 1$ hat einen Primteiler.
   \emptyset$. Folglich existiert $p \coloneqq \min D$. Wäre $p \notin
   \PZ$, so hätte $p$ einen Teiler $t \in \N$ mit $1 \neq t \neq
   p$. Dann wäre aber $t < p$ und $t \in D$ im Widerspruch zur Wahl
-  von $p$. Also $p \in \PZ$.
+  von $p$ (kleinste Zahl aus der Menge $D$). Also ist $p \in \PZ$.
 \end{beweis}
 \end{satz}
 
-% Satz 1.7
+% Satz 1.8
 \begin{satz}[Euklid]\label{satz:1.7}
 $\abs{\PZ} = \infty$
 \begin{beweis}
-  Seien $p_1, \ldots, p_r \in \PZ$. Nach \autoref{defi:1.5} hat
+  Seien $p_1, \ldots, p_r \in \PZ$. Nach \autoref{satz:1.6} hat
   $m \coloneqq p_1 \cdots p_{r}+1$ einen Primfaktor $p_{r+1}$. Wegen $p_1
   \nmid  m, \ldots, p_r \nmid  m$ ist $p_{r+1} \notin \{p_1,
     \ldots, p_r \}.$
@@ -493,8 +496,8 @@ $\abs{\PZ} = \infty$
 
 % Bemerkung
 \begin{bem}
-  Die größte bekannte Primzahl ist $2^{32582657}-1$ (04.09.2006). Sie
-  hat fast 10 Millionen
+  Die größte bekannte Primzahl ist $2^{43112609}-1$ (2008). Sie hat
+  fast 13 Millionen
   Dezimalstellen. (\url{http://primes.utm.edu/largest.html}). Die Zahl
   im Exponent muss ebenfalls eine Primzahl sein.
 \end{bem}
@@ -504,7 +507,7 @@ $\abs{\PZ} = \infty$
   Für $a, b \in \Z$ ist jeder Primteiler $p$ von $ab$ ein Teiler von
   $a$ oder $b$.
 \begin{beweis}
-  Im Fall $p\mid a$ sind wir fertig. Sei also $p \nmid a$. Dann $1 =
+  Im Fall $p\mid a$ sind wir fertig. Sei also \OE{} $p \nmid a$. Dann $1 =
   \ggt(p, a) = xp + ya$ mit geeigneten $x, y \in \Z$. Folglich gilt
   $p\mid xpb + yab = (xp + ya)b = 1b = b$.
 \end{beweis}
@@ -518,34 +521,35 @@ $\abs{\PZ} = \infty$
   \{1, \ldots, r\}$.
 \end{bem}
 
-% Satz 1.9
+% Satz 1.10
 \index{Primfaktorzerlegung}
 \begin{satz}[Eindeutige Primfaktorzerlegung]\label{satz:1.9}
   Zu jeder natürlichen Zahl $m \neq 1$ existieren $p_1, \ldots, p_r
-  \in \PZ$ mit $m = p_1 \cdots p_r$. Sind auch $q_1, \ldots, q_s \in
-  \PZ$ mit $m = q_1 \cdots q_s,$ so ist $r = s,$ und nach
+  \in \PZ$ mit $m = p_1\cdot \dotsc\cdot p_r$. Sind auch $q_1, \ldots, q_s \in
+  \PZ$ mit $m = q_1 \cdot \dotsc\cdot q_s,$ so ist $r = s$ und nach
   Umnummerierung gilt $p_i = q_i$ für $i = 1, \ldots, r$.
 \begin{beweis}
 \begin{description}
 \item[Existenz] Nach \autoref{satz:1.6} hat $m$ einen Primteiler
-  $p$. Im Fall $m = p$ sind wir fertig. Anderenfalls ist $\frac{m}{p}
-  \in \N$ und $1 < \frac{m}{p} < m$. Induktiv können wir annehmen,
+  $p$. Im Fall $m = p$ sind wir fertig. Anderenfalls ist $\nicefrac{m}{p}
+  \in \N$ und $1 < \nicefrac{m}{p} < m$. Induktiv können wir annehmen,
   dass $p_1, \ldots, p_{r-1} \in \PZ$ existiert mit $\frac{m}{p} = p_1
   \cdots p_{r-1}$, d.\,h. $m = p_1 \cdots p_{r-1}p$.
-\item[Eindeutigkeit] Aus $p_1 \cdots p_r = m = q_1 \cdots q_s$ folgt
-  $p_r\mid q_1 \ldots q_s$, also $p_r\mid q_i$ für ein $i \in \{1,
-  \ldots, s\}$. Sei also o.\,B.\,d.\,A. $p_r\mid q_s$. Wegen $q_s \in
-  \PZ$ folgt $p_r = q_s$, d.\,h. $p_1 \ldots p_{r-1} = q_1 \ldots
-  q_{s-1}$. Induktiv ist $r-1 = s-1$ und $p_i = q_i$ für $i = 1,
-  \ldots, r-1$ (nach Umnummerierung).
+\item[Eindeutigkeit] Aus $p_1 \cdot \dotsc\cdot p_r = m = q_1\cdot
+  \dotsc\cdot q_s$ folgt $p_r\mid q_1 \ldots q_s$, also $p_r\mid q_i$
+  für ein $i \in \{1, \ldots, s\}$. Sei also \OE{} $p_r\mid
+  q_s$. Wegen $q_s \in \PZ$ folgt $p_r = q_s$, d.\,h. $p_1 \cdot \dotsc\cdot
+  p_{r-1} = q_1\cdot \dotsc\cdot q_{s-1}$. Induktiv ist $r-1 = s-1$ und $p_i =
+  q_i$ für $i = 1, \ldots, r-1$ (nach Umnummerierung).
 \end{description}
 \end{beweis}
 \end{satz}
 
+
 % Bemerkung
 \begin{bem}
 \begin{enumerate}[(i)]
-\item Man nennt $m = p_1 \cdots p_r$ die \highl{Primfaktorzerlegung} von
+\item Man nennt $m = p_1 \cdot \dotsc\cdot p_r$ die \highl{Primfaktorzerlegung} von
   $m$. Durch Zusammenfassen mehrfach auftretender Faktoren kann man
   diese auch in der Form
   \[m = q_1^{a_1} \cdots q_t^{a_t}\]
@@ -563,10 +567,10 @@ $\abs{\PZ} = \infty$
   = \prod_{p \in \PZ}p^{c_p}$ sind also genau die Zahlen $\pm \prod_{p
     \in \PZ}p^{t_p}$ mit $t_p \leq \min \{b_p, c_p\}$ für
   alle $p \in \PZ$. Daher ist
-  \[\ggt(a, b) = \prod_{p \in \PZ} p^{\min\{b_p, c_p\}}\]
+  \[\ggt(m,n) = \prod_{p \in \PZ} p^{\min\{b_p, c_p\}}\]
 \item Die Konstruktion großer Primzahlen und die Primfaktorzerlegung
   großer natürlicher Zahlen sind von erheblicher Bedeutung für die
-  Kryptographie, d.\,h. die Lehre vom Ver- sowie Entschlüsseln
+  Kryptologie, d.\,h. die Lehre vom Ver- sowie Entschlüsseln
   geheimer Nachrichten.
 \end{enumerate}
 \end{bem}
@@ -610,9 +614,9 @@ von $M$ verschiedene Sichtweisen des gleichen mathematischen
 Sachverhaltes.
 \end{bem}
 
-% Definition
+% Definition 2.2
 \index{Modulo}
-\begin{defi}
+\begin{defi}[Kongruenz modulo]
   Seien $a, b \in \Z, m \in \N$ mit $m\mid a - b$. Dann nennt man $a$
   \highl{kongruent} zu $b$ modulo $m$ und schreibt $a \equiv b\pmod m$.
 \end{defi}
@@ -621,10 +625,13 @@ Sachverhaltes.
 \begin{satz}\label{satz:2.1}
   Die Kongruenz modulo $m$ ist eine Äquivalenzrelation auf
   $\Z$. Ferner ist sie mit Addition und Multiplikation
-  verträglich, d.\,h. es gilt: \[a \equiv a'\pmod m \wedge b
-  \equiv b'\pmod m \Rightarrow a ~\substack{+\\ \cdot}~b \equiv a'
-  ~\substack{+\\ \cdot}~b'\pmod m.\]
-  \help{Wie kann man die obigen Zeichen verbessern? - besser?}
+  verträglich, d.\,h. es gilt:
+  \begin{gather*}
+    a \equiv a'\pmod m \wedge b
+  \equiv b'\pmod m\\
+  \Rightarrow a + b \equiv a'+b'\pmod m \text{ und } ab\equiv
+  a'b'\pmod m
+  \end{gather*}
 \begin{beweis}
   \begin{compactdesc}
   \item[Reflexivität]$a \in \Z \Rightarrow m\mid 0 = a - a \Rightarrow
@@ -645,10 +652,10 @@ Sachverhaltes.
 
 % Bemerkung
 \begin{bem}
-  Für $a \in \Z$ und $m \in \N$ heit $a + m\Z = \{a + mz \colon z
+  Für $a \in \Z$ und $m \in \N$ heißt $a + m\Z = \{a + mz \colon z
   \in \Z\} = \{\ldots, a - 2m, a - m, a, a + m, a + 2m, \ldots\}$ die
   Restklassen von $a$ modulo $m$. (z.\,B. ist $2 + 6\Z = \{\ldots,
-  -10, -4, 2, 8, 14, \ldots\}$). Die Bezeichnung
+  -10, -4, 2, 8, 14, \ldots\}= 8+6\Z= -4+6\Z$). Die Bezeichnung
   "`\highl{Restklasse}"' erklärt sich folgendermaßen: Division mit
   Rest liefert $q, r \in \Z$ mit $a = qm + r$ und $0 \leq r <
   m$. Wegen $m\mid qm = a - r$ ist dann $a \equiv r\pmod m$, d.\,h. $a
@@ -660,10 +667,13 @@ Sachverhaltes.
     m\Z\} =\colon \ZmZ{m}\]
   Sind $r, s \in \{0, \ldots, m - 1\}$ mit $r \equiv s\pmod m$, so ist
   $m\mid  r - s$ und $\abs{ r - s} < m$, also $r - s = 0$, d.\,h. $r =
-  s$. Also: $\abs{\ZmZ{m}} = m$.
+  s$. Also:
+  \begin{gather*}
+    \abs{\ZmZ{m}} = m
+  \end{gather*}
 \end{bem}
 
-% Satz 2.2
+% Satz 2.3
 \begin{satz}\label{satz:2.2}
 Für $a, b, c \in \Z$ und $m \in \N$ gilt:
 \begin{enumerate}[(i)]
@@ -697,7 +707,7 @@ Für $a, b, c \in \Z$ und $m \in \N$ gilt:
   siehe \autoref{satz:2.2}(ii)!
 \end{bsp}
 
-% Satz 2.3
+% Satz 2.4
 \begin{satz}\label{satz:2.3}
   Seien $a, b \in \Z, m \in \N$ und $d \coloneqq \ggt(a, m)$.  Die Kongruenz
   $ax \equiv b\pmod m$ hat genau dann eine Lösung $x \in \Z$, wenn
@@ -716,7 +726,7 @@ Für $a, b, c \in \Z$ und $m \in \N$ gilt:
     einer Lösung.
 
     Für $x \in \Z$ gilt: \[ax \equiv b\pmod m \Leftrightarrow ax =
-    ax_0\pmod m \stackrel{\text{\autoref{satz:2.2}}}{\Leftrightarrow} x
+    ax_0\pmod m \stackrel{\text{\autoref{satz:2.2}}}{\Longleftrightarrow} x
     \equiv x_0\pmod m \Leftrightarrow x \in x_0 + m_0 \Z\]
     Sei $z \in \Z$. Division mit Rest liefert $q, r \in \Z$ mit $z =
     qd + r$ und $0 \leq r < d$. Also $zm_0 = q\underbrace{dm_0}_{= m}+
@@ -1073,7 +1083,7 @@ $\ggt(m, n) = 1 \Rightarrow \mu(mn) = \mu(m) \cdot \mu(n)$
   0 & \text{sonst}
 \end{cases}\]
 \begin{beweis}
-Sei o.\,B.\,d.\,A. $m \neq 1$. Betrachte Primfaktorzerlegung $m =
+Sei \OE{} $m \neq 1$. Betrachte Primfaktorzerlegung $m =
 p_1^{a_1} \cdots p_r^{a_r}$. Dann ist
 \begin{align*}
   \sum_{d\mid m}\mu(d) & = \sum_{i_1 = 0}^{a_1} \ldots \sum_{i_r =
@@ -1156,7 +1166,7 @@ Möbius-Inversion mit $f \coloneqq \varphi, F \coloneqq id_{\N}$ ergibt:
 \begin{satz}\label{satz:3.6}
   Für $m \in \N$ gilt, $\ZmZ{m}$ Körper $\Leftrightarrow$ $m$ Primzahl
 \begin{beweis}
-  Sei o.\,B.\,d.\,A. $m \neq 1$, denn ein Körper benötigt mind. 2
+  Sei \OE{} $m \neq 1$, denn ein Körper benötigt mind. 2
   Elemente.
   \begin{itemize}
   \item[\glqq$\Rightarrow$\grqq] Sei $m\notin \PZ$. Dann gilt $m = a
@@ -2042,7 +2052,7 @@ aber $3$.
 % Bemerkung 7.1
 \begin{bem}\label{bem:7.1}
   Sei $b \in L$ algebraisch über $K$. Wähle Polynom $\mu(b) =
-  0$. Dieses sei o.\,B.\,d.\,A. $\mu$ normiert. Dann ist $\mu$
+  0$. Dieses sei \OE{} $\mu$ normiert. Dann ist $\mu$
   eindeutig bestimmt. Ist nämlich $\nu \in K[X] \setminus \{0\}$
   normiert mit $\deg{\nu} = \deg{\mu}$ und $\nu(b) = 0$, so ist $\mu -
   \nu \in K[X]$ mit $\deg{\mu - \nu} < \deg{\mu}$ und $(\mu - \nu)(b)
@@ -2320,7 +2330,7 @@ Für $i \in \N_0$ ist $f^i \colon \F_{p^n} \mapsto \F_{p^n}$, $x \mapsto x^{p^i}$
 Seien $i, j \in \N_0$ mit $1 \leq i \leq j < n$ und $f^i = f^j$. Dann ist
   $f^{j-i} = id_{\F_{p^n}}$, d.\,h. $x^{p^{j-i}} = x$ für alle $x \in \F_{p^n}$. Da das Polynom $X^{p^{j-i}} - X$ im Fall $j \neq i$ höchstens $p^{j-i}$ Nullstellen hat, folgt $j = i$. Daher sind $id_{\F_{p^n}}, f, f^2, \ldots, f^{n-1}$ paarweise verschieden.\\
 Andererseits existiert ein $b \in \F_{p^n}$ mit $\F_{p^n} = \left\{0, 1, b, b^2, \ldots, b^{p^n-2}\right\}$ und $b^{p^n-1} = 1$.\\
-Der Primkörper $P$ von $\F_{p^n}$ ist zu $\F_p$ isomorph, o.\,B.\,d.\,A. $\F_p = P \subseteq \F_{p^n}$.\\
+Der Primkörper $P$ von $\F_{p^n}$ ist zu $\F_p$ isomorph, \OE{} $\F_p = P \subseteq \F_{p^n}$.\\
 Wegen $\F_{p^n} = \F_p(b)$ hat das Minimalpolynom $\mu$ von $b$ über $\F_p$ den Grad $n$.\\
 Schreibe $\mu = X^n + a_{n-1}X^{n-1} + \ldots + a_1X + a_0$ mit $a_i \in \F_p$.\\
 Für jeden Körperautomorphismus $g$ von $\F_{p^n}$ gilt: $g(a) = a$ für $a \in \F_p$, und 
@@ -2568,7 +2578,7 @@ Für jede Teilmenge $M \subseteq C$ mit $0, 1 \in M$ ist $M_{\infty}$ ein
 	% \CloseGraph
 	
 	\item $w, z \in M_{\infty} \Rightarrow w \cdot z \in M_{\infty}$:\\
-	o.\,B.\,d.\,A.: $w, z \in M_{\infty} \cap \R$, $\overbrace{w}^{\text{sonst (ii)}}, z > 0$\\
+	\OE{}: $w, z \in M_{\infty} \cap \R$, $\overbrace{w}^{\text{sonst (ii)}}, z > 0$\\
 	% \InitGraph{4}{4}{0.2}{0.2}{1cm}
 	% \Axes
 	% \MedPointAt(0, 3)
@@ -2587,7 +2597,7 @@ Für jede Teilmenge $M \subseteq C$ mit $0, 1 \in M$ ist $M_{\infty}$ ein
 	% \CloseGraph
 	
 	\item $z \in M_{\infty} \Rightarrow \frac{1}{z} = \frac{\overline{z}}{z \cdot \overline{z}} \in M_{\infty}$:\\
-	o.\,B.\,d.\,A.: $z \in \R, z > 0$\\
+	\OE{}: $z \in \R, z > 0$\\
 	% \InitGraph{4}{4}{0.2}{0.2}{1cm}
 	% \Axes
 	% \MedPointAt(0, 3)
@@ -2609,7 +2619,7 @@ Für jede Teilmenge $M \subseteq C$ mit $0, 1 \in M$ ist $M_{\infty}$ ein
 	Schreibe: $z = \left|z\right|\left(\cos\varphi + \operatorname{i} \cdot \sin\varphi\right)$.\\
 	Dann: $\sqrt{z} = \sqrt{\left|z\right|}\left(\cos\frac{\varphi}{2} + \operatorname{i} \cdot \sin\frac{\varphi}{2}\right)$.\\
 	Winkelhalbierung mit Zirkel und Lineal bekanntlich möglich.\\
-	o.\,B.\,d.\,A.: $z \in \R, z > 0$:\\
+	\OE{}: $z \in \R, z > 0$:\\
 	Höhensatz: $x^2 = 1 \cdot z$, d.\,h. $x = \sqrt{z}$\\
 	% \InitGraph{5}{3.5}{1.5}{1}{1cm}
 	% \Axes
