Alle Vorkommen von \addindex durch highl ersetzt.
\addindex wurde von Moritz definiert. Wir verwenden im Skript jedoch \highl. Die Funktion beider ist gleich. Daher erfolgte die Änderung.

git-svn-id: https://svn.lug-jena.de/uni-skripte@2334 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/kuelshammer-algebra1/Kapitel14.tex
+++ b/kuelshammer-algebra1/Kapitel14.tex
@@ -3,7 +3,7 @@
 % Definition 14.1
 %%%%%%%%%%%%%%%%%%%
 \begin{defi}\label{defi:14.1}
-Eine Gruppe $G$ heißt \addindex{Gruppe!auflösbar}{auflösbar}, wenn eine Folge
+Eine Gruppe $G$ heißt \highl{Gruppe!auflösbar}{auflösbar}, wenn eine Folge
 \[G = G_0 \tageq G_1 \tageq \ldots \tageq G_n = \left\{1\right\}\]
 von Untergruppen von $G$ mit folgender Eigenschaft: $G_i \taleq G_{i-1}$ und $G_{i-1}/G_i$ abelsch für $i = 1, \ldots, n$ existiert.
 \end{defi}
@@ -75,7 +75,7 @@ Für $n\in\N$ ist nach Übungsaufgabe 34 die Abbildung $\epsilon\colon\Sym\left(n\
 Für $g\in\Sym\left(n\right)$ nennt man $\epsilon\left(g\right)$ das Vorzeichen von $g$.\\
 Ist $\epsilon\left(g\right) = 1$, so heißt $g$ gerade, sonst ungerade.\\
 Dann ist \[\Alt\left(n\right):=\Ker\left(\epsilon\right) = \left\{g\in\Sym\left(n\right)\colon g \text{ gerade}\right\}\taleq\Sym\left(n\right).\]
-$\Alt\left(n\right)$ heißt \addindex{Gruppe!alternierend}{alternierende Gruppe} des Grades $n$.
+$\Alt\left(n\right)$ heißt \highl{Gruppe!alternierend}{alternierende Gruppe} des Grades $n$.
 
 Ist $n>1$ und $t\in\Sym\left(n\right)$ derart, dass $t$ die Zahlen $1$ und $2$ vertauscht und $3,\ldots,n$ festhält, so ist $\epsilon\left(t\right) = -1$, insbesondere ist $\epsilon$ surjektiv.
 Nach dem Homomorphiesatz (\autoref{satz:10.5}) ist also $\Sym\left(n\right)/\Alt\left(n\right) \cong \left(\left\{\pm 1\right\}, \cdot\right)$.\\
@@ -109,7 +109,7 @@ Daher ist $\abs{\Sym\left(n\right):\Alt\left(n\right)} = 2$ und $\abs{\Alt\left(
 	$c$ & $c$ & $b$ & $a$ & $1$
 	\end{tabular}\\
 	Also: $V_4$ abelsche Untergruppe von $\Alt\left(4\right)$.
-	Man nennt $V_4$ \addindex{}{Kleinsche Vierergruppe}.
+	Man nennt $V_4$ \highl{Kleinsche Vierergruppe}.
 	Die nichttrivialen Nebenklassen sind:
 	\[\begin{array}{lcl}
 	\begin{pmatrix}1 & 2 & 3 & 4\\ 2 & 3 & 1 & 4\end{pmatrix}V_4 & = & \left\{
@@ -214,10 +214,10 @@ Für $i=1,\ldots,n$ ist $G_i\taleq G_{i-1}$ und $G_{i-1}/G_i$ zyklisch (von Primz
 %%%%%%%%%%%%%%%%%%%
 \begin{defi}\label{defi:14.2}
 \begin{enumerate}[(i)]
-	\item Eine Körpererweiterung heißt \addindex{Körpererweiterng!Radikalerweiterung}{Radikalerweiterung}, wenn eine Folge von Teilkörpern $K = K_0 \subseteq K_1 \subseteq \ldots \subseteq K_r = L$ und $b_i \in K_i$, $n_i\in\N$ existiert mit\randbem{$b_i$ ist $n_i$--te Wurzel}
+	\item Eine Körpererweiterung heißt \highl{Körpererweiterng!Radikalerweiterung}{Radikalerweiterung}, wenn eine Folge von Teilkörpern $K = K_0 \subseteq K_1 \subseteq \ldots \subseteq K_r = L$ und $b_i \in K_i$, $n_i\in\N$ existiert mit\randbem{$b_i$ ist $n_i$--te Wurzel}
 	\[K_i = K_{i-1}\left(b_i\right) \text{ und } b_i^{n_i} \in K_{i-1} \text{ für } i=1,\ldots,r\]
 	
-	\item Ein Polynom $\varphi\in K\left[X\right]$ heißt über $K$ \addindex{Polynom!auflösbar, Radikale}{durch Radikale auflösbar}, wenn eine Radikalerweiterung $L\mid K$ derart existiert, dass $\varphi$ in $L\left[X\right]$ in Lineafaktoren zerfällt.
+	\item Ein Polynom $\varphi\in K\left[X\right]$ heißt über $K$ \highl{Polynom!auflösbar, Radikale}{durch Radikale auflösbar}, wenn eine Radikalerweiterung $L\mid K$ derart existiert, dass $\varphi$ in $L\left[X\right]$ in Lineafaktoren zerfällt.
 \end{enumerate}
 \end{defi}
 
@@ -427,7 +427,7 @@ Wegen $a^p = 1$ hat $a$ die Ordnung $p$.
 \begin{defi}\label{defi:14.3}
 Sei $n\in\N$.
 Für $i=1,\ldots,n-1$ sei $s_i\in\Sym\left(n\right)$ die Permutation, die $i$ und $i+1$ vertauscht und die übrigen Zahlen fest lässt.
-Man nennt $s_1,\ldots,s_{n-1}$ \addindex{}{Basistranspositionen} in $\Sym\left(n\right)$.
+Man nennt $s_1,\ldots,s_{n-1}$ \highl{Basistranspositionen} in $\Sym\left(n\right)$.
 \end{defi}
 
 %%%%%%%%%%%%%%%%%%%
@@ -442,7 +442,7 @@ Jedes $g\in \Sym\left(n\right)$ lässt sich als Produkt von Basistranspositionen 
 %%%%%%%%%%%%%%%%%%%
 \begin{beweis}
 Sei $\Phi\left(g\right) := \left\{\left\{i,j\right\}\colon 1\leq i<j\leq n, g\left(i\right)>g\left(j\right)\right\}$ und $l\left(g\right) := \abs{\Phi\left(g\right)}$.
-(Die Elemente in $\Phi\left(g\right)$ heißen \addindex{}{Inversionen} oder \addindex{}{Fehlstände} und $l\left(g\right)$ heißt die \addindex{L"ange}{Länge} von $g$.)
+(Die Elemente in $\Phi\left(g\right)$ heißen \highl{Inversionen} oder \highl{Fehlstände} und $l\left(g\right)$ heißt die \highl{L"ange}{Länge} von $g$.)
 Wir argumentieren nach $l\left(g\right)$.
 
 Im Fall $l\left(g\right) = 0$ ist $\Phi\left(g\right) = \varnothing$, d.h. $g\left(1\right)<g\left(2\right)<g\left(3\right)<\ldots<g\left(n\right)$ und daher $g=1$.
