--- a/kuelshammer-algebra1/Kapitel8.tex
+++ b/kuelshammer-algebra1/Kapitel8.tex
@@ -19,14 +19,14 @@ Dabei:
 	\item Codierung: injektive Abbildung\\
 	$\underbrace{E}_{\text{Encode}} \colon K^k \mapsto K^n \ \left(n > k\right)$  [oft: $E$ linear]
 	\item Decodierung: $D \colon K^n \mapsto K^k$ mit $D \circ E = id_{K^k}$
-	\item Hilfreich \addindex{Hamming!Abstand}{Hamming--Abstand} \randbem{Hamming: Pionier der Codierungstheorie} $d \colon K^n \times K^n \mapsto \R$ \randbem{$d$ Metrik}
+	\item Hilfreich \highl{Hamming!Abstand}{Hamming--Abstand} \randbem{Hamming: Pionier der Codierungstheorie} $d \colon K^n \times K^n \mapsto \R$ \randbem{$d$ Metrik}
 	\[d\left(x, y\right) := \left|\left\{i \colon 1 \leq i \leq n, x_i \neq y_i\right\}\right| \text{ für } x = \left(x_1, \ldots, x_n\right), \left(y_1, \ldots, y_n\right) \in K^n\] misst Anzahl der Fehler:
 	\begin{itemize}
 		\item $d\left(x, y\right) \geq 0$, $d\left(x, y\right) = 0 \Leftrightarrow x = y$
 		\item $d\left(x, y\right) = d\left(y, x\right)$
 		\item $d\left(x, z\right) \leq d\left(x, y\right) + d\left(y, z\right)$ (Dreiecksungleichung)
 	\end{itemize}
-	\item \addindex{Hamming!Gewicht}{Hamming--Gewicht}: $w \colon K^n \mapsto \R$,
+	\item \highl{Hamming!Gewicht}{Hamming--Gewicht}: $w \colon K^n \mapsto \R$,
 	\[w(x) = \left|\left\{i \colon 1 \leq i \leq n, x_i \neq 0\right\}\right| \text{ für } x = \left(x_1, \ldots, x_n\right) \in K^n\]
 	Dann: $d\left(x, y\right) = w\left(x - y\right)$
 \end{itemize}
@@ -37,7 +37,7 @@ Dabei:
 \begin{defi}{defi:8.1}
 Ein (linearer) Code der Länge $n$ ist ein Untervektorraum $C \subseteq K^n$. Man nennt $k := \dim C$ die Dimension von $C$. Außerdem heißt
 \[\delta := \min{\left\{d\left(x, y\right) \colon x, y \in C, x \neq y\right\}} = \min{\left\{w(z) \colon 0 \neq z \in C\right\}}\]
-\addindex{}{Minimalabstand} (\addindex{}{Minimalgewicht}) von $C$. Man spricht dann auch von einem $\left[n, k, \delta\right]$--Code.
+\highl{Minimalabstand} (\highl{Minimalgewicht}) von $C$. Man spricht dann auch von einem $\left[n, k, \delta\right]$--Code.
 \end{defi}
 
 \emph{Idee:} $C$ ist das Bild von $E \colon K^k \mapsto K^n$. Ist $e \in E$ mit $2e < \delta$ so kann $C$ mindestens $e$ Fehler korrigieren. (Kreise von Radius $e$ um Codewörter schneiden sich nicht.)
@@ -55,7 +55,7 @@ Beide Ziele liegen in verschiedenen Richtungen (Kompromisse!).
 \begin{bem}\label{bem:8.1}
 Viele \randbem{Vorteil dieser Konstruktion, zu Codes als Untervektorraum: man muss nur $\varphi$ und $n$ speichern, keine Basis eines Untervektorraumes mit $k$ Elementen} in der Praxis auftretende Codes werden mit Hilfe von Polynomringen konstruiert. Dabei identifiziert man $K^n$ mit $K[X] / \left(X^n - 1\right)$ durch \[\left(a_0, a_1, \ldots, a_{n-1}\right) \leftrightarrow a_0 + a_1X + a_2X^2 + \ldots + a_{n-1}X^{n-1} + \left(X^n - 1\right)\]
 Für jeden Teiler $\varphi$ von $X^n - 1$ gilt: $\left(X^n - 1\right) \subseteq \left(\varphi\right)$.\\
-Daher ist $C := \left(\varphi\right) / \left(X^n - 1\right) := \left\{\alpha\varphi + \left(X^n - 1\right) \colon \alpha \in K[X]\right\}$ ein Untervektorraum von $K[X] / \left(X^n - 1\right)$. Man nennt $C$ den \addindex{Zyklischer Code}{zyklischen Code} der Länge $n$ über $K$ mit \addindex{}{Generatorpolynom} $\varphi$.
+Daher ist $C := \left(\varphi\right) / \left(X^n - 1\right) := \left\{\alpha\varphi + \left(X^n - 1\right) \colon \alpha \in K[X]\right\}$ ein Untervektorraum von $K[X] / \left(X^n - 1\right)$. Man nennt $C$ den \highl{Zyklischer Code}{zyklischen Code} der Länge $n$ über $K$ mit \highl{Generatorpolynom} $\varphi$.
 \end{bem}
 
 %%%%%%%%%%%%%%%%%%%
@@ -96,14 +96,14 @@ Daher bilden $\varphi + \left(X^n - 1\right), X\varphi + \left(X^n - 1\right), \
 %%%%%%%%%%%%%%%%%%%
 \begin{bsp}\label{bsp:8.1}
 \begin{enumerate}[(a)]
-	\item (\addindex{Code!Ternärer Golay}{Ternärer Golay Code})\\
+	\item (\highl{Code!Ternärer Golay}{Ternärer Golay Code})\\
 	$q = 3, n = 11, \varphi = X^5 + X^4 - X^3 + X^2 - 1 \in \F_3[X], C := (\varphi) / \left(X^{11} - 1\right)$. [Man kann zeigen, dass $\varphi$ ein irreduzibler Teiler von $X^{11} - 1$ ist.]\\
 	Dann hat $C$ Länge $n = 11$ und Diemension $k = 6$.\\
 	Indem \randbem{Minimalgewicht bei Polynomen: Anzahl von $0$ verschiedenen Koeffizienten.} man die $3^6 = 729$ Codewörter berechnet (Computer!), sieht man, dass $C$ das Minimalgewicht $\delta = 5$ hat. (Das geht auch mit etwas Theorie.)\\
 	Daher schneiden sich Kreise mit Radius $2$ um Codewörter nicht. Jeder Kreis enthält: 
 	\[1 + \underbrace{11 \cdot 2}_{\text{Vektoren mit Abstand } 1} + \underbrace{\binom{11}{2} \cdot 4}_{\text{Abstand } 2} = 243 = 3^5\]
-	Vektoren. \randbem{Code kann 2 Fehler korrigieren.} Daher enthalten die Kreise vom Radius $2$ umd die $3^6$ Codewörter, insgesamt genau $3^6 \cdot 3^5 = 3^{11}$ verschiedene Vektoren, überdecken also ganz $\F_3^{11}$. Man spricht von einem \addindex{Code!perfekter}{perfekten Code}.
-	\item (\addindex{Code!Binärer Golay}{Binärer Golay Code})\\
+	Vektoren. \randbem{Code kann 2 Fehler korrigieren.} Daher enthalten die Kreise vom Radius $2$ umd die $3^6$ Codewörter, insgesamt genau $3^6 \cdot 3^5 = 3^{11}$ verschiedene Vektoren, überdecken also ganz $\F_3^{11}$. Man spricht von einem \highl{Code!perfekter}{perfekten Code}.
+	\item (\highl{Code!Binärer Golay}{Binärer Golay Code})\\
 	$q = 2, n = 23, \varphi := X^{11} + X^{10} + X^6 + X^5 + X^4 + X^2 + 1 \in \F_2[X], C := (\varphi) / \left(X^n - 1\right)$. [Man kann zeigen, dass $\varphi$ ein irreduzibler Teiler von $X^{23} - 1$ ist.]\\
 	Dann hat $C$ Länge $n = 23$ und Dimension $k = 12$.\\
 	Indem man die $2^{12} = 4096$ Codewörter ausrechnet (Computer!), sieht man, dass $C$ Minimalgewicht $\delta = 7$ hat. (Das geht auch mit etwas Theorie.)\\
